<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BloodConnect</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="donate_blood">Donate Blood</string>
    <string name="request_blood">Request Blood</string>
    <string name="greeting">Hello, User!</string>
    <string name="home">Home</string>
    <string name="requests">Requests</string>
    <string name="profile">Profile</string>
    <string name="don_have_account">Don\'t have an account? Register</string>
    <string name="already_have_account">Already have an account? Login</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone Number</string>
    <string name="registration_success">Registration successful. Please log in.</string>
    <string name="registering">Registering…</string>
    <string name="err_field_required">This field is required</string>
    <string name="err_password_too_short">Password must be at least 8 characters</string>
    <string name="err_password_all_digits">Password cannot consist entirely of digits</string>
    <string name="err_password_too_common">Password is too common. Please choose a stronger password</string>
    <string name="logout">Logout</string>
    <string name="logging_out">Logging out…</string>
</resources>
